Fixed button margin not being applied on mobile

--- a/src/css/Input.css
+++ b/src/css/Input.css
@@ -239,7 +239,7 @@
     width: 100%;
   }
 
-  .button-container button {
+  .button-container button.contained {
     width: 100%;
     margin: 5px 0;
   }
